# bayesian_calibration_slm

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: 00_synthetic_quickstart.py  01_yates09_template.py  02_angourie_full_workflow.py  03_lajolla_full_workflow copy.py  04_matagorda_full_workflow.py
src/slmcal/: __init__.py  data.py  metrics.py  preprocess.py
src/slmcal/bayes/: __init__.py  blackbox.py  priors.py  pymc.py
src/slmcal/core/: workflow.py
src/slmcal/io/: __init__.py  legacy.py
src/slmcal/models/: __init__.py  base.py  blackbox.py  yates09.py
src/slmcal/optimization/: __init__.py  _nsga2_ts.py  _nsga2_ts_legacy.py  nsga2.py  nsga2_fastopt.py
tests/: test_metrics.py  test_nsga2_smoke.py
